--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ resolver = "2"
 
 bitcoin = { version = "0.32", features = [ "serde", "rand", "rand-std" ] }
 lightning-invoice = { version = "0.32.0-rc1", features = [ "std", "serde" ] }
+lightning = { version = "0.1.1", default-features = false, features = [ "std" ] }
 lnurl-rs = { version = "0.9.0", features = [ "async", "async-https-rustls" ], default-features = false }
 anyhow = { version = "1.0", features = [ "backtrace" ] }
 thiserror = { version = "2.0.12" }
