--- a/aspd/Cargo.toml
+++ b/aspd/Cargo.toml
@@ -56,6 +56,8 @@ bip39.workspace = true
 bdk_wallet.workspace = true
 bdk_bitcoind_rpc.workspace = true
 
+lightning.workspace = true
+
 tonic = { workspace = true, features = ["tls-native-roots"] }
 tower.workspace = true
 http.workspace = true
