bark: add bolt12 support in the CLI

--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -52,6 +52,7 @@ miniscript.workspace = true
 bdk_wallet = { workspace = true, features = [ "rusqlite" ] }
 bdk_bitcoind_rpc.workspace = true
 bdk_esplora.workspace = true
+lightning.workspace = true
 
 tonic.workspace = true
 tokio.workspace = true
