justfile: Remove integration-all recipe because it runs unit tests
This recipe doesn't really make sense, it runs the integration tests +
unit tests, and we already have `just test` for running both.

--- a/.woodpecker/tests.yml
+++ b/.woodpecker/tests.yml
@@ -73,7 +73,7 @@ steps:
       - export BARK_EXEC=$CI_WORKSPACE/target/debug/bark
       - ls -al $${ELECTRS_EXEC}
       - service postgresql start
-      - just test-integration-all || echo $? > /tmp/test_exit_code
+      - just test-integration || echo $? > /tmp/test_exit_code
       - mkdir -p "/host/data/test/${CI_COMMIT_SHA}/esplora/"
       - cp -r test/esplora/* "/host/data/test/${CI_COMMIT_SHA}/esplora/"
       - echo "Test data -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/esplora/"
@@ -102,7 +102,7 @@ steps:
       - ls -al $${BITCOIND_EXEC}
       - ls -al $${LIGHTNINGD_EXEC}
       - service postgresql start
-      - just test-integration-all || echo $? > /tmp/test_exit_code
+      - just test-integration || echo $? > /tmp/test_exit_code
       - mkdir -p "/host/data/test/${CI_COMMIT_SHA}/btc29/"
       - cp -r test/btc29/* "/host/data/test/${CI_COMMIT_SHA}/btc29/"
       - echo "Test data -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/btc29/"
