--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ bitcoin = { version = "0.32", features = [ "serde", "rand", "rand-std" ] }
 lightning-invoice = { version = "0.32.0-rc1", features = [ "std", "serde" ] }
 lnurl-rs = { version = "0.9.0", features = [ "async", "async-https-rustls" ], default-features = false }
 anyhow = { version = "1.0", features = [ "backtrace" ] }
+thiserror = { version = "2.0.12" }
 log = { version = "0.4.27", features = [ "kv", "kv_serde" ] }
 serde = { version = "1.0.219" }
 # grpc clients
