--- a/bitcoin-ext/Cargo.toml
+++ b/bitcoin-ext/Cargo.toml
@@ -8,7 +8,7 @@ name = "bitcoin_ext"
 
 [features]
 default = [ "bdk" ]
-bdk = [ "bdk_wallet", "bdk_esplora", "reqwest", "async-trait" ]
+bdk = [ "bdk_wallet", "bdk_esplora", "reqwest", "async-trait", "thiserror" ]
 
 [dependencies]
 lazy_static.workspace = true
@@ -24,3 +24,4 @@ bdk_wallet = { workspace = true, optional = true }
 bdk_esplora = { workspace = true, optional = true }
 reqwest = { version = "0.11.27", features = [ "rustls-tls" ], default-features = false, optional = true }
 async-trait = { version = "0.1.88", optional = true }
+thiserror = { workspace = true, optional = true }
