lib: Use thiserror for Error types

--- a/ark-lib/Cargo.toml
+++ b/ark-lib/Cargo.toml
@@ -21,6 +21,7 @@ serde.workspace = true
 # * INTERNAL DEPS
 bark-bitcoin-ext = { path = "../bitcoin-ext", default-features = false }
 lazy_static.workspace = true
+thiserror.workspace = true
 ciborium.workspace = true
 rand.workspace = true
 lightning-invoice.workspace = true
