--- a/.woodpecker/bark-release.yml
+++ b/.woodpecker/bark-release.yml
@@ -94,6 +94,8 @@ steps:
     #  or `skopeo inspect docker://quay.io/buildah/stable@sha256:5f67b6ece887c7ffbc063d174fd95f057a76b218adf1160c7a5c3d63997efd4b
     image: quay.io/buildah/stable@sha256:5f67b6ece887c7ffbc063d174fd95f057a76b218adf1160c7a5c3d63997efd4b
     environment:
+      REGISTRY_LOGIN_TOKEN:
+        from_secret: REGISTRY_LOGIN_TOKEN
       DOCKER_LOGIN_TOKEN:
         from_secret: DOCKER_LOGIN_TOKEN
     pull: true
@@ -101,34 +103,39 @@ steps:
     commands:
       - cat VERSION
       - echo $DOCKER_LOGIN_TOKEN | buildah login -u secondark --password-stdin docker.io
+      - echo $REGISTRY_LOGIN_TOKEN | buildah login -u registry --password-stdin registry.2nd.dev
+      # Pull containers from registry.2nd.dev
+      - buildah pull registry.2nd.dev/bark:linux-amd64
+      - buildah pull registry.2nd.dev/bark:linux-arm64
+      - buildah pull registry.2nd.dev/bark:linux-armv7
       # Tag containers for docker.io
-      - buildah tag registry.2nd.dev/bark:linux-amd64 docker.io/bark:linux-amd64
-      - buildah tag registry.2nd.dev/bark:linux-arm64 docker.io/bark:linux-arm64
-      - buildah tag registry.2nd.dev/bark:linux-armv7 docker.io/bark:linux-armv7
+      - buildah tag registry.2nd.dev/bark:linux-amd64 docker.io/secondark/bark:linux-amd64
+      - buildah tag registry.2nd.dev/bark:linux-arm64 docker.io/secondark/bark:linux-arm64
+      - buildah tag registry.2nd.dev/bark:linux-armv7 docker.io/secondark/bark:linux-armv7
       # Push containers to docker.io
-      - buildah push docker.io/bark:linux-amd64
-      - buildah push docker.io/bark:linux-arm64
-      - buildah push docker.io/bark:linux-armv7
+      - buildah push docker.io/secondark/bark:linux-amd64
+      - buildah push docker.io/secondark/bark:linux-arm64
+      - buildah push docker.io/secondark/bark:linux-armv7
       # Tag containers with specific version number for docker.io
-      - buildah tag registry.2nd.dev/bark:linux-amd64 "docker.io/bark:linux-amd64-$(cat VERSION)"
-      - buildah tag registry.2nd.dev/bark:linux-arm64 "docker.io/bark:linux-arm64-$(cat VERSION)"
-      - buildah tag registry.2nd.dev/bark:linux-armv7 "docker.io/bark:linux-armv7-$(cat VERSION)"
+      - buildah tag registry.2nd.dev/bark:linux-amd64 "docker.io/secondark/bark:linux-amd64-$(cat VERSION)"
+      - buildah tag registry.2nd.dev/bark:linux-arm64 "docker.io/secondark/bark:linux-arm64-$(cat VERSION)"
+      - buildah tag registry.2nd.dev/bark:linux-armv7 "docker.io/secondark/bark:linux-armv7-$(cat VERSION)"
       # Push containers with specific version number to docker.io
-      - buildah push "docker.io/bark:linux-amd64-$(cat VERSION)"
-      - buildah push "docker.io/bark:linux-arm64-$(cat VERSION)"
-      - buildah push "docker.io/bark:linux-armv7-$(cat VERSION)"
+      - buildah push "docker.io/secondark/bark:linux-amd64-$(cat VERSION)"
+      - buildah push "docker.io/secondark/bark:linux-arm64-$(cat VERSION)"
+      - buildah push "docker.io/secondark/bark:linux-armv7-$(cat VERSION)"
       # Create and push multi-arch docker manifest with tag latest to docker.io
       - buildah manifest create     bark-multiarch-docker
-      - buildah manifest add        bark-multiarch-docker docker://docker.io/bark:linux-amd64
-      - buildah manifest add        bark-multiarch-docker docker://docker.io/bark:linux-arm64
-      - buildah manifest add        bark-multiarch-docker docker://docker.io/bark:linux-armv7
-      - buildah manifest push --all bark-multiarch-docker docker://docker.io/bark:latest
+      - buildah manifest add        bark-multiarch-docker docker://docker.io/secondark/bark:linux-amd64
+      - buildah manifest add        bark-multiarch-docker docker://docker.io/secondark/bark:linux-arm64
+      - buildah manifest add        bark-multiarch-docker docker://docker.io/secondark/bark:linux-armv7
+      - buildah manifest push --all bark-multiarch-docker docker://docker.io/secondark/bark:latest
       # Create and push multi-arch docker manifest with versioned tag to docker.io
       - buildah manifest create     "bark-multiarch-docker-$(cat VERSION)"
-      - buildah manifest add        "bark-multiarch-docker-$(cat VERSION)" "docker://docker.io/bark:linux-amd64-$(cat VERSION)"
-      - buildah manifest add        "bark-multiarch-docker-$(cat VERSION)" "docker://docker.io/bark:linux-arm64-$(cat VERSION)"
-      - buildah manifest add        "bark-multiarch-docker-$(cat VERSION)" "docker://docker.io/bark:linux-armv7-$(cat VERSION)"
-      - buildah manifest push --all "bark-multiarch-docker-$(cat VERSION)" "docker://docker.io/bark:$(cat VERSION)"
+      - buildah manifest add        "bark-multiarch-docker-$(cat VERSION)" "docker://docker.io/secondark/bark:linux-amd64-$(cat VERSION)"
+      - buildah manifest add        "bark-multiarch-docker-$(cat VERSION)" "docker://docker.io/secondark/bark:linux-arm64-$(cat VERSION)"
+      - buildah manifest add        "bark-multiarch-docker-$(cat VERSION)" "docker://docker.io/secondark/bark:linux-armv7-$(cat VERSION)"
+      - buildah manifest push --all "bark-multiarch-docker-$(cat VERSION)" "docker://docker.io/secondark/bark:$(cat VERSION)"
 
   - name: release-bark
     when:
