--- a/aspd/config.default.toml
+++ b/aspd/config.default.toml
@@ -3,6 +3,7 @@ network = "regtest"
 vtxo_expiry_delta = 144
 vtxo_exit_delta = 12
 htlc_expiry_delta = 6
+max_arkoor_depth = 5
 round_board_confirmations = 12
 round_tx_untrusted_input_confirmations = 2
 round_interval = "10s"
