--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,11 +60,11 @@ futures = {version = "0.3.30"}
 async-trait = "0.1.83"
 # bitcoin
 bip39 = { version = "2.0.0", features = [ "rand", "serde" ] }
-miniscript = "12.2"
+miniscript = "12.3"
 rand = { version = "0.9.0", features = [ "std", "std_rng" ] }
-bdk_wallet = { package = "bdk_wallet", version = "1.1.0" }
-bdk_esplora = { package = "bdk_esplora", version = "0.20.1", features = [ "std", "async-https-rustls", "tokio" ], default-features = false }
-bdk_bitcoind_rpc = { package = "bdk_bitcoind_rpc", version = "0.17.1" }
+bdk_wallet = { version = "2.0.0-beta.0" }
+bdk_esplora = { version = "0.22.0", features = [ "std", "async-https-rustls", "tokio" ], default-features = false }
+bdk_bitcoind_rpc = { version = "0.20.0" }
 # tracing and monitoring
 opentelemetry = "0.29.0"
 opentelemetry_sdk = { version = "0.29.0", features = [ "trace", "rt-tokio" ] }
