ci: Copy data before pipeline timeout.

--- a/.woodpecker/tests-codecov.yml
+++ b/.woodpecker/tests-codecov.yml
@@ -67,16 +67,7 @@ steps:
       - ls -al $${BITCOIND_EXEC}
       - ls -al $${LIGHTNINGD_EXEC}
       - service postgresql start
-      - just test-integration-codecov || echo $? > /tmp/test_exit_code
-      - mkdir -p "/host/data/test/${CI_COMMIT_SHA}/btc29-codecov/"
-      - cp -r test/btc29-codecov/* "/host/data/test/${CI_COMMIT_SHA}/btc29-codecov/"
-      - echo "Test data -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/btc29-codecov/"
-      - |
-        if [ -f /tmp/test_exit_code ]; then
-          code=$(cat /tmp/test_exit_code)
-          echo "Tests failed with exit code $code."
-          exit $code
-        fi
+      - bash ./contrib/ci-run-test.sh test-integration-codecov
 
   - name: code-coverage
     when:
