Use GNU not MUSL.

--- a/.woodpecker/images/releases/aspd/Dockerfile
+++ b/.woodpecker/images/releases/aspd/Dockerfile
@@ -1,4 +1,4 @@
-FROM --platform=linux/amd64 alpine:latest
+FROM --platform=linux/amd64 debian:bookworm-slim
 COPY aspd-linux-x86_64 /usr/local/bin/aspd
 RUN chmod +x /usr/local/bin/aspd
 CMD ["/usr/local/bin/aspd"]
