bark-json: Make ExitError correctly serializable

--- a/bark-json/Cargo.toml
+++ b/bark-json/Cargo.toml
@@ -16,3 +16,6 @@ bitcoin.workspace = true
 serde.workspace = true
 humantime.workspace = true
 thiserror.workspace = true
+
+[dev-dependencies]
+serde_json.workspace = true
