--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ toml = "0.8.19"
 rmp-serde = "1.3.0"
 config = "0.15.6"
 humantime = "2.1.0"
+semver = "1.0.26"
 # async + gRPC stack
 tonic-build = "0.12.2"
 prost = "0.13.2"
